# skeleton-fastapi-gcp

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release-please.yml
app/: pyproject.toml
app/app/: config.py
app/app/tests/: config_test.py
